--- a/modules/gateway/assertions/LDAPQueryAssertion/src/main/java/com/l7tech/external/assertions/ldapquery/console/LDAPQueryPropertiesDialog.form
+++ b/modules/gateway/assertions/LDAPQueryAssertion/src/main/java/com/l7tech/external/assertions/ldapquery/console/LDAPQueryPropertiesDialog.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="739" height="400"/>
+      <xy x="20" y="20" width="642" height="421"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -22,7 +22,7 @@
             </constraints>
             <properties>
               <labelFor value="eb0dd"/>
-              <text value="LDAP Connector:"/>
+              <text value="&amp;LDAP Connector:"/>
             </properties>
           </component>
           <component id="eb0dd" class="javax.swing.JComboBox" binding="ldapCombo">
@@ -37,7 +37,7 @@
             </constraints>
             <properties>
               <labelFor value="d1657"/>
-              <text value="LDAP Search Filter:"/>
+              <text value="LDAP Search &amp;Filter:"/>
             </properties>
           </component>
           <component id="d1657" class="javax.swing.JTextField" binding="searchField">
@@ -57,7 +57,9 @@
             <children>
               <component id="a940e" class="javax.swing.JTable" binding="mappingTable">
                 <constraints/>
-                <properties/>
+                <properties>
+                  <preferredScrollableViewportSize width="450" height="200"/>
+                </properties>
               </component>
             </children>
           </scrollpane>
@@ -97,7 +99,7 @@
           </grid>
           <component id="3d1f5" class="javax.swing.JLabel">
             <constraints>
-              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="The search string is used to select the LDAP entry from which attributes will be read."/>
@@ -108,7 +110,7 @@
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Protect against LDAP injection"/>
+              <text value="Protect against LDAP &amp;injection"/>
             </properties>
           </component>
         </children>
@@ -139,55 +141,71 @@
           </component>
         </children>
       </grid>
-      <grid id="bc1af" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="bc1af" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
         <children>
           <component id="55d40" class="javax.swing.JCheckBox" binding="cacheLDAPAttributeValuesCheckBox">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <selected value="false"/>
-              <text value="Cache &amp;LDAP attribute values"/>
+              <text value="Cache LDAP attribute &amp;values"/>
             </properties>
           </component>
-          <grid id="c797e" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties/>
-            <border type="none"/>
-            <children>
-              <component id="579b0" class="javax.swing.JSpinner" binding="cachePeriodSpinner">
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                    <preferred-size width="60" height="-1"/>
-                  </grid>
-                </constraints>
-                <properties/>
-              </component>
-              <component id="42c64" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <labelFor value="579b0"/>
-                  <text value="minutes"/>
-                </properties>
-              </component>
-            </children>
-          </grid>
           <hspacer id="e3d00">
             <constraints>
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
           </hspacer>
+          <component id="51cd5" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="2" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <labelFor value="b931d"/>
+              <text value="Cache &amp;size:"/>
+            </properties>
+          </component>
+          <component id="609da" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="2" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <labelFor value="579b0"/>
+              <text value="Cache &amp;maximum age:"/>
+            </properties>
+          </component>
+          <component id="b931d" class="javax.swing.JSpinner" binding="cacheSizeSpinner" default-binding="true">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="100" height="-1"/>
+              </grid>
+            </constraints>
+            <properties/>
+          </component>
+          <component id="42c64" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <labelFor value="579b0"/>
+              <text value="minutes"/>
+            </properties>
+          </component>
+          <component id="579b0" class="javax.swing.JSpinner" binding="cachePeriodSpinner">
+            <constraints>
+              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="100" height="-1"/>
+              </grid>
+            </constraints>
+            <properties/>
+          </component>
         </children>
       </grid>
       <grid id="e44d4" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -203,7 +221,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Fail assertion if search yields no results."/>
+              <text value="Fail assertion if search yields &amp;no results."/>
             </properties>
           </component>
           <hspacer id="ddf09">
