--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/JmsQueuePropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/JmsQueuePropertiesDialog.form
@@ -113,13 +113,13 @@
                   </component>
                 </children>
               </grid>
-              <grid id="db4b1" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="db4b1" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
-                <border type="none" title="Reset values to the defaults for provider type:"/>
+                <border type="none" title="Provider Type:"/>
                 <children>
                   <component id="abea7" class="javax.swing.JComboBox" binding="providerComboBox">
                     <constraints>
@@ -129,10 +129,11 @@
                   </component>
                   <component id="4e64c" class="javax.swing.JButton" binding="applyReset">
                     <constraints>
-                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <text value="Apply"/>
+                      <text value="Reset"/>
+                      <toolTipText value="Set default values for the selected provider type."/>
                     </properties>
                   </component>
                 </children>
