--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/JmsQueuePropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/JmsQueuePropertiesDialog.form
@@ -123,13 +123,15 @@
                 <children>
                   <component id="abea7" class="javax.swing.JComboBox" binding="providerComboBox">
                     <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="1" use-parent-layout="false"/>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
-                    <properties/>
+                    <properties>
+                      <enabled value="true"/>
+                    </properties>
                   </component>
                   <component id="4e64c" class="javax.swing.JButton" binding="applyReset">
                     <constraints>
-                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <text value="Reset"/>
